--- a/Homework-1/style.css
+++ b/Homework-1/style.css
@@ -27,7 +27,7 @@ button {
   display: flex;
   align-items: center;
   height: 80px;
-  color: #e2ffff;
+  color: #abcbfd;
   background-color: rgb(49 128 247);
 }
 .container {
