Добавил товар с помощью JS ES5 и ES6

--- a/Homework-1/style.css
+++ b/Homework-1/style.css
@@ -29,6 +29,7 @@ button {
   height: 80px;
   color: #abcbfd;
   background-color: rgb(49 128 247);
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.5);
 }
 .container {
   width: 1200px;
@@ -36,6 +37,7 @@ button {
 }
 .header-wrapper,
 .footer-wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -102,7 +104,24 @@ button {
   list-style-type: none;
   margin: 0 20px;
 }
-
+.header-clock {
+  min-width: 81px;
+}
+.header-basket {
+  position: absolute;
+  min-width: 300px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.header-basket-active {
+  top: 105%;
+}
 .basket-btn {
   background-color: rgb(93 214 186);
   box-shadow: 0px 3px 5px 0px #aec1be;
@@ -114,10 +133,11 @@ button {
 
 .main {
   padding: 80px 0;
-  height: calc(100vh - 320px);
+  min-height: calc(100vh - 320px);
 }
 .product-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -127,6 +147,7 @@ button {
   background-color: #fff;
   border-radius: 5px;
   padding-bottom: 30px;
+  margin-bottom: 2%;
 }
 .product-block-img {
   overflow: hidden;
@@ -146,6 +167,8 @@ button {
 }
 .product-block-desc {
   color: rgb(82 103 134);
+  max-width: 160px;
+  margin: 0 auto;
 }
 .product-block-quantity {
   display: flex;
@@ -153,8 +176,12 @@ button {
   justify-content: space-between;
   margin-top: 30px;
 }
+.product__price {
+  font-size: 14px;
+}
 .product-quant span {
   margin: 0 8px;
+  color: #468efa;
 }
 .item-minus,
 .item-plus {
