--- a/Homework-1/style.css
+++ b/Homework-1/style.css
@@ -109,18 +109,22 @@ button {
 }
 .header-basket {
   position: absolute;
-  min-width: 300px;
+  min-width: 400px;
   padding: 20px;
   background-color: #fff;
   border-radius: 5px;
-  top: 0;
+  top: -100%;
   right: 0;
+  opacity: 0;
   z-index: -1;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
-  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+  transition: opacity 0.5s, top 0.2s;
 }
 .header-basket-active {
   top: 105%;
+  opacity: 1;
+  z-index: 1;
+  transition: top cubic-bezier(0.075, 0.82, 0.165, 1) 1s, opacity 1.2s, z-index 0.5s;
 }
 .basket-btn {
   background-color: rgb(93 214 186);
@@ -130,10 +134,43 @@ button {
   box-shadow: none;
   color: #e2ffff;
 }
+.basket-product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.basket-product-title {
+  min-width: 170px;
+}
+.basket-product-quantity {
+  min-width: 20px;
+  text-align: center;
+}
+.basket-product-price {
+  min-width: 90px;
+  text-align: right;
+}
+.basket-image {
+  width: 70px;
+}
+.basket-image img {
+  width: 100%;
+}
+.basket-total {
+  font-weight: 900;
+  color: #2274ee;
+  text-align: right;
+}
 
 .main {
+  position: relative;
   padding: 80px 0;
   min-height: calc(100vh - 320px);
+
+}
+.product {
+  position: relative;
 }
 .product-wrapper {
   display: flex;
@@ -207,6 +244,90 @@ button {
 }
 .product-add-basket img {
   width: 100%;
+}
+
+.gamburger {
+  padding-top: 100px;
+}
+.gamburger-filling-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.gamburgers {
+  width: 43%;
+}
+.fillings {
+  width: 52%;
+}
+.gamburger-wrapper,
+.filling-wrapper,
+.additional-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.gamburger-block,
+.filling-block,
+.additional-block {
+  width: 49%;
+  text-align: center;
+  background-color: #fff;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+.gamburger-image,
+.filling-image {
+  width: 100%;
+}
+.gamburger-image img,
+.filling-image img {
+  width: 100%;
+}
+.gamburger-btn,
+.filling-btn,
+.additional-btn {
+  padding: 7px 12px;
+  margin-top: 20px;
+}
+.gamburger-btn:hover,
+.filling-btn:hover,
+.additional-btn:hover {
+  background-color: #468efa;
+}
+.filling-block {
+  width: 32.5%;
+}
+.filling-title {
+  margin: 5px 0;
+}
+.filling-price,
+.filling-calory,
+.additional-price,
+.additional-calory {
+  font-size: 12px;
+}
+.additional-wrapper {
+  justify-content: flex-start;
+}
+.additional-block {
+  display: flex;
+  align-items: center;
+  padding-bottom: 0;
+  max-width: 220px;
+  margin-right: 15px;
+}
+.additional-title {
+  margin: 0 auto 12px;
+}
+.additional-image {
+  margin-right: 15px;
+}
+.gamb-block-active {
+  background-color: rgb(203, 255, 155);
+  transition: 0.5s;
 }
 
 .footer {
