--- a/Homework-1/style.css
+++ b/Homework-1/style.css
@@ -120,7 +120,7 @@ button {
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
   transition: opacity 0.3s, top 2s;
 }
-.header-basket-active {
+.headerBasketActive {
   top: 105%;
   opacity: 1;
   z-index: 1;
